[tool.poetry]
name = "twpasolver"
version = "0.0.1"
description = "Project twpasolver created by twpalab"
authors = ["twpalab"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/twpalab/twpasolver"
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = ">=1.26"
numba = ">=0.59.0"
pydantic =">=2.6.3"
scikit-rf=">=0.32.0"
scipy=">=1.12.0"
h5py = "^3.10.0"
CyRK = "^0.8.6"
matplotlib = ">=3.7"
networkx = "<=3.*"
sympy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
pylint = ">=2.16.0"
pylint-exit = "^1.2.0"
pytest = ">=7.2.2"
pytest-cov = ">=4.1.0"
mypy = "^1.7.1"
sympy = "1.*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
nbsphinx = "^0.9.4"
furo = "^2023.3.27"
recommonmark = "^0.7.1"
sphinxcontrib-bibtex = "^2.5.0"
sphinx-markdown-tables = "^0.0.17"
sphinx-copybutton = "^0.5.1"
sphinx-last-updated-by-git = "^0.3.5"
autodoc_pydantic = ">=2.1.0"
ipykernel = ">=6.15.2"
ipython = ">=8.4.0"

[[tool.mypy.overrides]]
module=["numba.*", "h5py.*", "skrf", "scipy.*", "matplotlib.*", "CyRK.*", "networkx.*"]
ignore_missing_imports = true
